# spiced-ai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/spiced/: __init__.py
src/spiced/ai/: __init__.py  base.py  factory.py  gemini_provider.py  mock_provider.py  openai_provider.py  prompt_templates.py
src/spiced/app/: __init__.py  main.py  services.py
src/spiced/connectors/: __init__.py  unity.py
src/spiced/core/: __init__.py  dashboard.py  debugging.py  demo_data.py  feedback.py  feedback_classifier.py  feedback_parser.py  plans.py  projects_service.py  test_result_parser.py  testing.py  unity_log_parser.py  usage_counter.py
src/spiced/storage/: __init__.py  database.py  debug_sessions.py  feedback_batches.py  projects.py  settings.py  test_cases.py  test_runs.py  usage.py
src/spiced/ui/: __init__.py  context_panel.py  main_window.py  onboarding.py  theme.py
src/spiced/ui/screens/: __init__.py  base.py  chat.py  dashboard.py  debugging.py  feedback.py  help.py  onboarding.py  projects.py  settings.py  testing.py
tests/: test_build_readiness.py  test_dashboard_actions.py  test_dashboard_summary.py  test_debug_sessions.py  test_debugging_service.py  test_demo_data.py  test_feedback_batches.py  test_feedback_classifier.py  test_feedback_parser.py  test_feedback_service.py  test_onboarding.py  test_projects.py  test_providers.py  test_storage_threading.py  test_test_cases.py  test_test_result_parser.py  test_test_runs.py  test_testing_service.py  test_unity_connector.py  test_unity_log_parser.py  test_usage_counter.py
