[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spiced"
version = "0.0.1"
description = "A human-centered AI QA, debugging, testing, and feedback-review companion for indie game developers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lauren Rousell" }]
keywords = ["gamedev", "unity", "qa", "debugging", "ai-assistant"]

dependencies = [
    "PySide6>=6.6",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Gemini is optional and no longer the default provider.
gemini = ["google-generativeai>=0.5"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
]

[project.gui-scripts]
spiced = "spiced.app.main:main"

[project.urls]
Homepage = "https://github.com/celestewish/spiced-ai"
Repository = "https://github.com/celestewish/spiced-ai"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
